--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,12 @@
 PORT=3000
 
 # Variable para seleccionar el motor de base de datos
-DB_ENGINE=mysql
+
+
+# DB_ENGINE=mysql
+# DB_ENGINE=postgres
+# DB_ENGINE=mssql
+DB_ENGINE=oracle
 
 # Configuración para MySQL
 MYSQL_HOST=localhost
@@ -13,23 +18,23 @@ DB_TIMEZONE=America/Bogota
 
 # Configuración para PostgreSQL
 POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_NAME=almacen_2025_iisem_node
+POSTGRES_USER=yoner
+POSTGRES_PASSWORD=yoner
+POSTGRES_NAME=hotel_y_reservas_db
 POSTGRES_PORT=5432
 
 # Configuración para SQL Server
 MSSQL_HOST=localhost
 MSSQL_USER=sa
-MSSQL_PASSWORD=password
-MSSQL_NAME=almacen_2025_iisem_node
+MSSQL_PASSWORD=Admin25**
+MSSQL_NAME=Hotel_y_Reservas_db
 MSSQL_PORT=1433
 
 # Configuración para Oracle
 ORACLE_HOST=localhost
-ORACLE_USER=ALMACENDB_ADMIN
-ORACLE_PASSWORD=password
-ORACLE_NAME=xe
+ORACLE_USER=HOTEL_Y_RESERVAS_DB
+ORACLE_PASSWORD=Admin25**
+ORACLE_NAME=XEPDB1
 ORACLE_PORT=1521
 
 # JWT Secret
