--- a/backend/.env
+++ b/backend/.env
@@ -3,10 +3,10 @@ PORT=3000
 # Variable para seleccionar el motor de base de datos
 
 
-# DB_ENGINE=mysql
+DB_ENGINE=mysql
 # DB_ENGINE=postgres
 # DB_ENGINE=mssql
-DB_ENGINE=oracle
+# DB_ENGINE=oracle
 
 # Configuración para MySQL
 MYSQL_HOST=localhost
