--- a/backend-Hotel/package.json
+++ b/backend-Hotel/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "nodemon src/server.ts --exec ts-node",
     "populate": "ts-node src/faker/populate.ts"
